# brevix

./: .gitattributes  .gitignore  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  skills-lock.json  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm.yml  pypi.yml  release.yml
.qoder/skills/: brevix-commit  brevix-stats
agents/: brevix-builder.md  brevix-haiku.md  brevix-investigator.md  brevix-opus.md  brevix-reviewer.md  brevix-sonnet.md
commands/: brevix-check.md  brevix-check.toml  brevix-commit.md  brevix-commit.toml  brevix-compress-file.md  brevix-compress-file.toml  brevix-compress.toml  brevix-config.toml  brevix-count.toml  brevix-doctor.toml  brevix-help.toml  brevix-install.toml  brevix-learn.toml  brevix-review.toml  brevix-route-stats.toml  brevix-route.toml  brevix-stats.md  brevix-stats.toml  brevix-update.toml  brevix-version.toml  brevix.md  brevix.toml  compress.toml
docs/: CONTRIBUTING.md  how-it-works.md
evals/: README.md  llm_run.py  measure.py
evals/prompts/: en.txt
examples/: before-after.md
extensions/browser/: README.md  STORE_LISTING.md  build.sh  manifest.json
hooks/: brevix-activate.js  brevix-mode-tracker.js  brevix-mutex.js  brevix-statusline.ps1  brevix-statusline.sh  install.sh  uninstall.sh
mcp-servers/brevix-shrink/: README.md  compress.js  index.js  package.json
skills/brevix-stats/: SKILL.md
src/brevix/: cli.py  (+9 more)
tests/: conftest.py  test_accuracy_guard.py  test_adaptive.py  test_compressor.py  test_file_compress.py  test_install.py  test_route.py  test_route_client.py  test_route_confidence.py  test_route_learn.py  test_route_stats.py  test_session_logs.py
(+27 files in other folders)
